tests/baselines/reference/newNonReferenceType.errors.txt
==== tests/cases/compiler/newNonReferenceType.ts (2 errors) ====
    var a = new any();
                ~~~
!!! newNonReferenceType.ts(1,13): error TS2095: Cannot find name 'any'.
    var b = new boolean(); // error
                ~~~~~~~
!!! newNonReferenceType.ts(2,13): error TS2095: Cannot find name 'boolean'.
    